@@ -1,0 +1,7 @@
+use strict;
+use warnings;
+
+use Moose;
+with 'Dist::Zilla::Role::Plugin';
+
+1;
