@@ -10,6 +10,8 @@ Revision history for {{$dist->name}}
         - fix interaction of TRIAL comment and BEGIN block in PkgVersion
           (thanks, Michael Conrad)
         - fix documentation for default NextRelease format (thanks, Dan Book!)
+        - the build directory is also added to @INC when evaluating 'dzil
+          authordeps --missing'.
 
 6.012     2018-04-21 10:20:21+02:00 Europe/Oslo
         - revert addition of Archive::Tar::Wrapper as a mandatory prereq (in
